--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Preguntes"></activity>
         <activity android:name=".views.CustomActivty" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
