--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.AdminAdapter"></activity>
+        <activity android:name=".views.QuestActivity"></activity>
         <activity android:name=".views.CustomActivty" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
