--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -44,8 +44,8 @@ dependencies {
     implementation 'com.zekapp.library:progreswheelview:1.1.5'
     implementation 'com.params.progressview:step-progress:1.0.2'
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    //implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    //implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
